--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,11 @@ edition = "2024"
 rust-version = "1.85.1"
 
 [workspace.dependencies]
+anyhow = { version = "1.0.98" }
+clap = { version = "4.5.39", features = ["cargo", "derive"] }
+serde = { version = "1.0.219", features = ["derive"] }
+
+jolt-cli = { path = "crates/jolt-cli" }
 
 [profile.dev]
 incremental = true
