--- a/crates/jolt-cli/Cargo.toml
+++ b/crates/jolt-cli/Cargo.toml
@@ -15,3 +15,5 @@ rust-version.workspace = true
 anyhow.workspace = true
 clap.workspace = true
 serde.workspace = true
+
+jolt-manager.workspace = true
